# solaris-agent

./: .gitignore  FRONTEND.md  SWARM.md  SWARM_BEHAVIORAL_SPEC.md  TOOLS_DOC.md  VIBECHECK.md  check_swarm_redis.py  command.md  good run.md  gooodrun.txt  juice-commands.md  sample_run.md  setup-mcp.sh  smoke-test.sh  test_swarm.ps1  walter.md
agent-swarm/: .env.example  .eslintrc.json  .gitignore  README.md  benchmark-complete.json  benchmark-exploit-json.ts  benchmark-ollama.ts  benchmark-partial.json  benchmark-remaining.json  benchmark-remaining.ts  config.json  ecosystem.config.js  package.json  test-llm.ts  test-osint-agent.ts  test-osint-comprehensive.ts  test-osint.ts  tsconfig.json  vitest.config.ts
blue-team-upgrades/: INTEGRATION_GUIDE.md  PLAN.MD  UPGRADE_PLAN.md  behavioral_flow_analyzer.py  file_index_builder.py  llm_verifier_patch.py  multi_file_context_builder.py  semantic_lifting_agent.py
docs/: EXTRA.md  SOLARIS_AGENT_MVP_GRAPH_NETWORK.md  Solaris-Agent_ Complete System Plan.md  This is a rich research landscape. Here's everythi.md  deerflow-analysis.md  deerflow-file-organization.md  deerflow-llm-parsing.md  deerflow-memory-context.md  deerflow-streaming.md  deerflow-ui-ux.md  tools.md
frontend/: .env.example  README.md  index.html  metadata.json  package.json  vite.config.ts
frontend-refactor/: package.json
gamma-experimental/: package.json
plans/: deerflow-integration-master-plan.md  memory-implementation-plan.md  mvp-implementation-plan.md  streaming-implementation-plan.md  swarm-database-schema.md  swarm-frontend-database-mapping.md  swarm-integration-plan.md  swarm-sql-migration.md  swarm-supabase-fix-migration.sql  swarm-timeline-migration-simple.sql  swarm-timeline-migration.sql  ui-ux-implementation-plan.md  week2-implementation-plan.md
swarm-ts/: .env.example  (+3 more)
vibecheck/: .env.example  PROJECT_STATUS.md  README.md  VIBECHECK_BLUE_TEAM_REPORT.md  analyze_routes.py  docker-compose.yml  pyproject.toml  requirements.txt  test_kilo_api.py  test_openrouter_debug.py
vibecheck/agents/: __init__.py
vibecheck/api/: __init__.py  main.py
vibecheck/api/routes/: chat.py  report.py  scan.py  swarm.py
vibecheck/core/: config.py  ollama.py  parser.py  qdrant.py  redis_bus.py  supabase_client.py
vibecheck/dashboard/src/components/: ScanProgress.tsx
vibecheck/fixtures/toy-vulnerable-app/: Dockerfile  expected_findings.json  package.json
vibecheck/fixtures/toy-vulnerable-app/infrastructure/: main.tf
vibecheck/fixtures/toy-vulnerable-app/src/: app.ts  db.ts
vibecheck/fixtures/toy-vulnerable-app/src/middleware/: auth.ts
vibecheck/fixtures/toy-vulnerable-app/src/routes/: auth.ts  login.ts  orders.ts
vibecheck/migrations/: 001_supabase_schema.sql  002_add_current_stage.sql  002_llm_sessions.sql  003_add_stage_output.sql  004_add_swarm_tables.sql
vibecheck/rules/: express-idor.yaml  express-taint.yaml
vibecheck/tests/: mocks.py  test_regression.py
vibecheck/worker/: llm_verifier.py  scan_worker.py  scan_worker_updated.py  semgrep_runner.py
(+653 files in other folders)
