[project]
name = "vibecheck"
version = "0.1.0"
description = "Dual-agent autonomous security system for auditing and red-teaming AI-generated code"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "VibeCheck Team"}
]
keywords = ["security", "static-analysis", "ai", "llm", "vulnerability-detection"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    
    # Async Support
    "asyncio-pool>=0.6.0",
    "aiofiles>=24.1.0",
    
    # Database Clients
    "redis>=5.2.0",           # FalkorDB & Redis Streams
    "qdrant-client>=1.12.0",  # Vector DB
    
    # LLM Integration
    "ollama>=0.4.0",
    "httpx>=0.28.0",          # OpenRouter API calls
    
    # Git Operations
    "gitpython>=3.1.43",
    
    # Utilities
    "python-dotenv>=1.0.1",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",        # Retry logic
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

# Week 2+ dependencies (not needed for Week 1 MVP)
parser = [
    "tree-sitter>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-python>=0.23.0",
]

rag = [
    "lightrag-hku>=0.1.0",
]

security = [
    "semgrep>=1.100.0",
]

[project.scripts]
vibecheck-api = "api.main:run_server"
vibecheck-worker = "worker.scan_worker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "core", "worker", "agents"]

[tool.ruff]
target-version = "py312"
line-length = 100
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B904",   # raise without from inside except
]

[tool.ruff.isort]
known-first-party = ["api", "agents", "core", "worker"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
